fix mobile spacing and breadcrumbs

--- a/web/src/index.scss
+++ b/web/src/index.scss
@@ -59,3 +59,7 @@ label {
 .chakra-steps .step div:nth-child(2) span {
   color: white;
 }
+
+.chakra-breadcrumb__list {
+  display: flex;
+}
